--- a/SoapStockApp/SoapStockApp.csproj
+++ b/SoapStockApp/SoapStockApp.csproj
@@ -43,7 +43,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Customer.cs" />
-    <Compile Include="Item.cs" />
+    <Compile Include="Delivery.cs" />
+    <Compile Include="Product.cs" />
     <Compile Include="Order.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
