--- a/SoapStockApp/SoapStockApp.csproj
+++ b/SoapStockApp/SoapStockApp.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="Customer.cs" />
     <Compile Include="Delivery.cs" />
+    <Compile Include="Inventory.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="Order.cs" />
     <Compile Include="Program.cs" />
